fix: log now visible when on dark theme

--- a/src/routes/game/game.scss
+++ b/src/routes/game/game.scss
@@ -295,7 +295,7 @@ ol {
 
 #log {
   max-width: 20rem;
-  color: var(--bg-dark);
+  color: var(--text);
   list-style: none;
   margin: 2rem auto;
   padding: 0;
